--- a/.github/workflows/master_niaapp2.yml
+++ b/.github/workflows/master_niaapp2.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -26,12 +26,15 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-      
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,17 +50,20 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F0C4D9CB0CA94A358E2CF0AB264DE871 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_28D5CCC683A445D5A195D58901BE6223 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_43C9C133DDB145A2828DE2172907E0C9 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_98004F00A57046388AFEDE31D2CF3DC7 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C4C525E46FF442C6AF399759DE0F12FA }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B338CE746D784577906BEACC39B55933 }}
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
         with:
           app-name: 'niaapp2'
           slot-name: 'Production'
